Crex/tests/type_declarations/intersection_types/invalid_types/invalid_array_type.crxt
--TEST--
array type cannot take part in an intersection type
--FILE--
<?crx

function foo(): array&Iterator {}

?>
--EXPECTF--
Fatal error: Type array cannot be part of an intersection type in %s on line %d
